--- a/com.lunifera.graduate.ui/src/com/lunifera/graduate/ui/forms/StudentDetailView.html
+++ b/com.lunifera.graduate.ui/src/com/lunifera/graduate/ui/forms/StudentDetailView.html
@@ -6,7 +6,7 @@
           content="grad:com.lunifera.graduate.ui.fields" />
  </head>
  <body> 
-  <vaadin-vertical-layout caption="" description="sadfdsaf" primary-style-name="dsafads" style-name="dsafdsa" immediate="true" height-full="true"> 
+  <vaadin-vertical-layout caption="" description="Student Details" primary-style-name="dsafads" style-name="dsafdsa" immediate="true" height-full="true"> 
    <vaadin-tab-sheet size-full="true" _id="masterTabSheet"> 
     <tab caption="Basics" selected="true"> 
      <vaadin-horizontal-layout spacing="true" size-full="true" margin="true"> 
